# use-fastapi

./: DATABASE_GUIDE_COMPLETE.md  GEMINI.md  LEARNING_ROADMAP.md  README.md  SSR_vs_CSR_Comparison.md  python_package_management.md
docs/: 00_FASTAPI_FEATURES_AND_CAUTIONS.md  01_FASTAPI_CLI_GUIDE.md  02_POETRY_GUIDE.md  03_TESTING_LOGGING_GUIDE.md  04_DATABASE_GUIDE.md  05_DOCKER_GUIDE.md  06_CLOUD_DEPLOYMENT_GUIDE.md  07_FASTAPI_PROJECT_STRUCTURE.md  08_AUTHENTICATION_GUIDE.md  08_GUIDE_VALIDATION_AND_NEXT_STEPS.md  09_ADVANCED_TOPICS_AND_NEXT_STEPS.md  DATABASE_GUIDE_SUMMARY.md  DOCKER_COMPLETE_GUIDE.md  GUIDE_STRUCTURE.txt  INDEX.md  README.md
kaira-1.0.0/: index.html
kaira-fastapi-poetry/: .env.prod  DOCKER_COMPOSE_GUIDE.md  Dockerfile  FASTAPI_DEPENDS_SUMMARY.md  docker-compose.yml  pyproject.toml  test_db_connection.py
kaira-fastapi-poetry/scripts/: align_schema.py  push-to-docker-hub.sh
kaira-fastapi-poetry/src/kaira_fastapi_poetry/: config.py  crud.py  database.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py  security.py
kaira-fastapi-poetry/src/kaira_fastapi_poetry/api/: auth.py  endpoints.py  posts.py  users.py
kaira-fastapi-poetry/src/kaira_fastapi_poetry/kaira-1.0.0/: auth.html  index.html  posts.html  system.html  tester.html  users.html
kaira-fastapi-poetry/src/kaira_fastapi_poetry/kaira-1.0.0/js/: api-pages.js
kaira-fastapi-poetry/src/kaira_fastapi_poetry/middleware/: __init__.py  logging.py
kaira-fastapi-poetry/src/kaira_fastapi_poetry/models/: __init__.py  base.py
kaira-fastapi-poetry/tests/: test_auth_refresh.py  test_database_connection.py  test_main.py
kaira-server/: Dockerfile  main.py  requirements.txt
kaira-server/app/: config.py  logging_config.py  main.py  models.py
kaira-server/app/middleware/: logging.py
kaira-server/tests/: conftest.py  test_errors.py  test_fixture_scope.py  test_fixture_scope_module2.py  test_fixtures.py  test_main.py  test_models.py  test_static.py
